# kova-video-dubbing

./: .gitignore  .goreleaser.yaml  Dockerfile  KOVA_FEATURE_AUDIT_REPORT.md  NOTICE_UPSTREAM.md  README.md  UI_E2E_REPORT.md  app.go  app_test.go  docker.md  faq.md  go.mod  go.sum  wails.json  wails_assets_test.go  wails_main.go
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml
cmd/cli/: main.go
cmd/desktop/: main.go  main_test.go
cmd/server/: main.go
config/: config-example.toml  config.go  config_test.go  gateway.go  gateway_test.go
docs/: API_GATEWAY_INTEGRATION_REPORT.md  KOVA_2_IMPLEMENTATION_REPORT.md  KOVA_DOCUMENTATION.md  WAILS_DESKTOP_BUILD_FIX.md
docs/zh/: cli.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  api.ts  i18n.ts  main.tsx  styles.css  types.ts
internal/api/: subtitle.go
log/: zap.go
notebooks/: KOVA_COLAB_WORKER_REPORT.md  KOVA_STT_GPU.ipynb  Kova_OmniVoice_Colab.ipynb
scripts/: build-wails.ps1  generate_flashcard_visual_ass.py  kova_pycapcut_builder.py  kova_visual_ocr.py  mask_english_flashcard_text.ps1  omnivoice_server.py  refit_existing_dub.go  test_omnivoice_server.py  translate_srt_ollama_cloud.ps1
static/: index.html
voice-studio/: .gitignore  README.md  pyproject.toml  requirements-colab.txt
voice-studio/notebooks/: Kova_Voice_Studio_GPU.ipynb
voice-studio/src/kova_voice_studio/: __init__.py  api.py  engine.py  store.py
voice-studio/static/: app.js  index.html  styles.css
voice-studio/tests/: test_api.py  test_store.py
(+132 files in other folders)
