[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "kova-voice-studio"
version = "0.1.0"
description = "Independent, consent-aware voice profile service for KOVA"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.20,<1",
  "soundfile>=0.13,<1",
  "uvicorn[standard]>=0.34,<1"
]

[project.optional-dependencies]
omnivoice = ["omnivoice", "torch>=2.4"]
dev = ["pytest>=8,<9"]

[project.scripts]
kova-voice-studio = "kova_voice_studio.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kova_voice_studio"]
